ProdIND/ProdPrograms/force-app/main/default/objects/Transaction_Log__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <label>API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rest</fullName>
            </value>
            <value>
                <fullName>Soap</fullName>
            </value>
            <value>
                <fullName>SF Standard Rest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>