ProdIND/ProdPrograms/force-app/main/default/objects/Transaction_Log__c/fields/Auth_Techniquie__c.field-meta.xml
<CustomField>
    <fullName>Auth_Techniquie__c</fullName>
    <label>Auth Techniquie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Named credentials</fullName>
            </value>
            <value>
                <fullName>username and Password</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>