ProdIND/ProdPrograms/force-app/main/default/objects/Transaction_Log__c/fields/Integration_Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Configuration_Name__c</fullName>
    <label>Integration Configuration Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>