ProdIND/ProdPrograms/force-app/main/default/objects/Transaction_Log__c/fields/Request_Header__c.field-meta.xml
<CustomField>
    <fullName>Request_Header__c</fullName>
    <label>Request Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>