ProdIND/ProdPrograms/force-app/main/default/objects/Transaction_Log__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>