ProdIND/ProdPrograms/force-app/main/default/objects/Transaction_Log__c/fields/RestMethod__c.field-meta.xml
<CustomField>
    <fullName>RestMethod__c</fullName>
    <label>RestMethod</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>