ProdIND/ProdPrograms/force-app/main/default/objects/Transaction_Log__c/fields/Target_URL__c.field-meta.xml
<CustomField>
    <fullName>Target_URL__c</fullName>
    <label>Target URL</label>
    <type>Url</type>
</CustomField>