ProdIND/ProdPrograms/force-app/main/default/objects/Transaction_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Configuration_Name__c</columns>
    <columns>API__c</columns>
    <columns>Auth_Techniquie__c</columns>
    <columns>Target_URL__c</columns>
    <columns>RestMethod__c</columns>
    <columns>Request_Header__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Parent_Object__c</columns>
    <columns>Target_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>